# metadata-agent

./: Cargo.toml  Makefile  README.md  metadata.xml  useragent.xml  userscript.sh  userscript.xml
.devcontainer/: devcontainer.json
hack/: init_fallback_with_dhcp.sh
sample_data/: mime_message.txt  user-data
sample_data/network_config_v1/: test_bond.yaml  test_bonded_vlan.yaml  test_bridge.yaml  test_multiple_vlan.yaml  test_nameserver.yaml  test_physical.yaml  test_physical_2.yaml  test_route.yaml  test_subnet_dhcp.yaml  test_subnet_multiple.yaml  test_subnet_static.yaml  test_subnet_with_routes.yaml  test_vlan.yaml
src/: common.rs  file.rs  main.rs  public_keys.rs  user-agent.rs  userdata.rs  users.rs  zpool.rs
src/provider/: amazon.rs  digitalocean.rs  generic.rs  mod.rs  nocloud.rs  smartos.rs
src/userdata/: cloudconfig.rs  multiformat_deserialize.rs  networkconfig.rs
src/users/: ffi.rs  libc.rs
