[package]
name = "illumos-metadata-agent"
description = "Cloud metadata bootstrap software for illumos systems"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/illumos/metadata-agent"

[features]
default = [ "vendored-openssl" ]
vendored-openssl = [ "openssl/vendored" ]

[[bin]]
name = "metadata"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tempfile = "3"
anyhow = "1"
slog = "2.7"
slog-term = "2.7"
atty = "0.2"
toml = "0.5"

#
# I believe it is necessary to pull this in here, so that we can demand the
# static linking of the vendored OpenSSL.  We don't use it directly, but the
# same version will then be used by reqwest.
#
openssl = { version = "0.10", optional = true }

[dependencies.reqwest]
version = "0.10"
default-features = false
features = [ "blocking", "json" ]
